Correcion par apoder ejecutar el proyecto

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,19 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "net.perlasjp.juego.Main"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "net.perlasjp.juego.Main",
+            "projectName": "proyectojuego_s2_g3"
+        },
+        {
+            "type": "java",
             "name": "Debug Juego",
             "request": "launch",
             "mainClass": "net.perlasjp.juego.Main",
