--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,18 @@ dependencies {
 application {
     mainClass = 'net.perlasjp.juego.Main'
 }
+
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'net.perlasjp.juego.Main'
+        )
+    }
+
+}
+run {
+    standardInput = System.in
+}
+
+
+
